<resources>
    <string name="app_name">的客圈</string>
    <string name="dk_smart_title">的客智能</string>
    <string name="dk_community_title">的客社区</string>
    <string name="dk_cate_title">的客美食</string>
    <string name="dk_user_center_title">我的的客</string>
    <string name="login_phone_number_tip">请输入手机号</string>
    <string name="login_password_tip">请输入登录密码</string>
    <string name="login_button_tip">登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register_tip">免费注册</string>
    <string name="login_failure_tip">登录失败</string>
    <string name="username_is_empty">用户名不能为空！</string>
    <string name="username_is_not_phone_number">用户名必须为手机号！</string>
    <string name="password_is_empty">密码不能为空！</string>
    <string name="password_is_not_valid">密码不合法！</string>
    <string name="play">播放</string>
    <string name="stop">暂停</string>
</resources>
