<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_new"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:src="@mipmap/ic_login_logo"/>

    <LinearLayout
        android:id="@+id/ll_login_input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_login_logo"
        android:layout_marginTop="63dp"
        android:background="@drawable/shape_border_line_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="21dp"
            android:paddingRight="21dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_login_username"/>

            <EditText
                android:id="@+id/et_login_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:background="@null"
                android:hint="@string/login_phone_number_tip"
                android:textColorHint="@color/gray_808080"
                android:textSize="16sp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:background="@color/gray_808080"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="21dp"
            android:paddingRight="21dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_login_password"/>

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:background="@null"
                android:hint="@string/login_password_tip"
                android:textColorHint="@color/gray_808080"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_login_input_view"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_border_line_red"
        android:text="@string/login_button_tip"
        android:textColor="@color/white_new"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/tv_login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bt_login_submit"
        android:layout_marginTop="18dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/gray_808080"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_login_submit"
        android:layout_marginTop="18dp"
        android:drawablePadding="3dp"
        android:drawableRight="@mipmap/ic_login_arrow"
        android:text="@string/login_register_tip"
        android:textColor="@color/gray_808080"
        android:textSize="16sp"/>
</RelativeLayout>